fix a quirk of the navbar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ nav {
 }
 
 .navbar-spacer.spacer-active {
+  position: absolute;
   height: 50px;
   width: 100%;
   bottom: 0;
